--- a/sopwriter-frontend/index.html
+++ b/sopwriter-frontend/index.html
@@ -3,14 +3,15 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon"
+    href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>📝</text></svg>" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link
     href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Sora:wght@400;500;600;700;800&display=swap"
     rel="stylesheet" />
-  <title>SOPWriter - Professional SOP & Visa Guidance</title>
+  <title>SOP Writer</title>
   <meta name="description" content="Expert SOP writing and visa guidance services for students applying abroad" />
 </head>
 
